--- a/clash/config/test.yaml
+++ b/clash/config/test.yaml
@@ -22,7 +22,7 @@ geox-url:
 # 控制面板
 external-controller: 0.0.0.0:9020
 secret: ""
-external-ui: ui
+external-ui: /ui
 external-ui-url: "https://ghp.ci/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip"
 
 # 匹配进程 always/strict/off
