--- a/clash/config/dns-test.yaml
+++ b/clash/config/dns-test.yaml
@@ -75,7 +75,7 @@ dns:
   respect-rules: true
   # 模式切换 redir-host / fake-ip
   enhanced-mode: fake-ip
-  fake-ip-range: 28.0.0.1/8
+  fake-ip-range: 198.18.0.1/16
   # 模式切换 whitelist/blacklist 
   # 黑名单模式表示如果匹配成功则不返回 Fake-IP, 白名单模式时只有匹配成功才返回 Fake-IP
   fake-ip-filter-mode: blacklist
@@ -86,17 +86,21 @@ dns:
     - geosite:cn
     - rule-set:fcm_domain
   default-nameserver:
-    - 1.1.1.1
-    - 8.8.8.8
-  proxy-server-nameserver:
-    - 1.1.1.1
-    - 8.8.8.8
-  nameserver:
-    - 1.1.1.1
-    - 8.8.8.8
-  fallback:
-    - 114.114.114.114
+    - tls://1.12.12.12
     - 223.5.5.5
+  proxy-server-nameserver:
+    - tls://1.1.1.1
+    - tls://8.8.8.8
+    - https://dns.cloudflare.com/dns-query
+    - https://dns.google/dns-query
+  nameserver:
+    - tls://1.1.1.1
+    - tls://8.8.8.8
+    - https://dns.cloudflare.com/dns-query
+    - https://dns.google/dns-query
+  fallback:
+    - 223.5.5.5
+    - 119.29.29.29
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -106,9 +110,14 @@ dns:
     "rule-set:private_domain,cn_domain,pt_domain,fcm_domain":
     - 223.5.5.5
     - 119.29.29.29
+    geosite:cn:
+      - 223.5.5.5
+      - 119.29.29.29
     "rule-set:geolocation-!cn":
-      - "https://dns.cloudflare.com/dns-query"
-      - "https://dns.google/dns-query"
+    - tls://1.1.1.1
+    - tls://8.8.8.8
+    - https://dns.cloudflare.com/dns-query
+    - https://dns.google/dns-query
  
    
 proxies:
@@ -121,20 +130,6 @@ pr: &pr {type: select, proxies: [🚀 节点选择]}
 # 策略组
 proxy-groups:
   - {name: 🚀 节点选择, type: select, proxies: [🌐 全部节点]}
-  - {name: 📹 YouTube,!!merge <<: *pr}
-  - {name: 🍀 Proxy-A_domain,!!merge <<: *pr}
-  - {name: 🤖 ChatGPT,!!merge <<: *pr}
-  - {name: 🍀 Google,!!merge <<: *pr}
-  - {name: 👨🏿‍💻 GitHub,!!merge <<: *pr}
-  - {name: 🐬 OneDrive,!!merge <<: *pr}
-  - {name: 🪟 Microsoft,!!merge <<: *pr}
-  - {name: 🎵 TikTok,!!merge <<: *pr}
-  - {name: 📲 Telegram,!!merge <<: *pr}
-  - {name: 🎥 NETFLIX,!!merge <<: *pr}
-  - {name: ✈️ Speedtest,!!merge <<: *pr}
-  - {name: 💶 PayPal,!!merge <<: *pr}
-  - {name: 🍎 Apple, type: select, proxies: [🟢 直连]}
-  - {name: 🎯 全球直连, type: select, proxies: [🟢 直连]}
   - {name: 🐟 漏网之鱼,!!merge <<: *pr}
   - {name: 🌐 全部节点, type: select, include-all: true}
 rules:
@@ -142,26 +137,26 @@ rules:
   - RULE-SET,Proxy-A_domain,🚀 节点选择
   - RULE-SET,pt_domain,🟢 直连
   - RULE-SET,fcm_domain,🟢 直连
-  - RULE-SET,apple_domain,🍎 Apple
+  - RULE-SET,apple_domain,🟢 直连
   - RULE-SET,proxylite,🚀 节点选择
-  - RULE-SET,ai,🤖 ChatGPT
+  - RULE-SET,ai,🚀 节点选择
   - RULE-SET,google_domain,🚀 节点选择
-  - RULE-SET,github_domain,👨🏿‍💻 GitHub
-  - RULE-SET,youtube_domain,📹 YouTube
-  - RULE-SET,onedrive_domain,🐬 OneDrive
-  - RULE-SET,microsoft_domain,🪟 Microsoft
-  - RULE-SET,tiktok_domain,🎵 TikTok
-  - RULE-SET,speedtest_domain,✈️ Speedtest
-  - RULE-SET,telegram_domain,📲 Telegram
-  - RULE-SET,netflix_domain,🎥 NETFLIX
-  - RULE-SET,paypal_domain,💶 PayPal
+  - RULE-SET,github_domain,🚀 节点选择
+  - RULE-SET,youtube_domain,🚀 节点选择
+  - RULE-SET,onedrive_domain,🎯 全球直连
+  - RULE-SET,microsoft_domain,🎯 全球直连
+  - RULE-SET,tiktok_domain,🚀 节点选择
+  - RULE-SET,speedtest_domain,🚀 节点选择
+  - RULE-SET,telegram_domain,🚀 节点选择
+  - RULE-SET,netflix_domain,🚀 节点选择
+  - RULE-SET,paypal_domain,🚀 节点选择
   - RULE-SET,geolocation-!cn,🚀 节点选择
-  - RULE-SET,cn_domain,🎯 全球直连
-  - RULE-SET,google_ip,🍀 Google,no-resolve
-  - RULE-SET,netflix_ip,🎥 NETFLIX,no-resolve
-  - RULE-SET,telegram_ip,📲 Telegram,no-resolve
+  - RULE-SET,cn_domain,🟢 直连
+  - RULE-SET,google_ip,🚀 节点选择,no-resolve
+  - RULE-SET,netflix_ip,🚀 节点选择,no-resolve
+  - RULE-SET,telegram_ip,🚀 节点选择,no-resolve
   - RULE-SET,adblock,REJECT  
-  - RULE-SET,cn_ip,🎯 全球直连
+  - RULE-SET,cn_ip,🟢 直连
   - MATCH,🐟 漏网之鱼
 rule-anchor:
   ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: mrs}
