--- a/clash/config/dns-test.yaml
+++ b/clash/config/dns-test.yaml
@@ -140,7 +140,7 @@ rules:
   - RULE-SET,netflix_ip,🚀 节点选择,no-resolve
   - RULE-SET,telegram_ip,🚀 节点选择,no-resolve
   - RULE-SET,adblock,REJECT  
-  - RULE-SET,cn_ip,🟢 直连,no-resolve
+  - RULE-SET,cn_ip,🟢 直连
   - MATCH,🐟 漏网之鱼
 rule-anchor:
   ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: mrs}
