--- a/clash/config/dns-test.yaml
+++ b/clash/config/dns-test.yaml
@@ -142,6 +142,7 @@ rules:
   - RULE-SET,adblock,REJECT  
   - RULE-SET,cn_ip,🟢 直连
   - RULE-SET,giff,🚀 节点选择
+  - RULE-SET,proxy_ziyong,🚀 节点选择
   - MATCH,🐟 漏网之鱼
 rule-anchor:
   ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: mrs}
@@ -172,6 +173,7 @@ rule-providers:
   geolocation-!cn: {!!merge <<: *domain, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/geolocation-!cn.mrs"}
   cn_domain: {!!merge <<: *domain, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/cn.mrs"}
   giff: {!!merge <<: *class, url: "https://raw.githubusercontent.com/Hostage-02/sing-box-srs/refs/heads/main/clash/yaml/giff.yaml"}
+  proxy_ziyong: {!!merge <<: *class, url: "https://raw.githubusercontent.com/Hostage-02/sing-box-srs/refs/heads/main/clash/yaml/Proxy.yaml"}
   
   cn_ip: {!!merge <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/cn.mrs"}
   google_ip: {!!merge <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
