--- a/clash/config/test.yaml
+++ b/clash/config/test.yaml
@@ -87,6 +87,9 @@ dns:
     - rule-set:fcm_domain
   default-nameserver:
     - https://223.5.5.5/dns-query
+  proxy-server-nameserver:
+    - https://223.5.5.5/dns-query
+    - https://doh.pub/dns-query
   nameserver:
     - https://223.5.5.5/dns-query
     - https://doh.pub/dns-query
